src/objects/pse__Filter_Set__c.object
<CustomObject>
    <description>Represents a collection of filters that determines which resources or projects display in the Resource or Project Planners.</description>
    <fields>
        <fullName>pse__Feature__c</fullName>
        <inlineHelpText>Restricts where this filter set will be shown as an option. Currently only &quot;Resource Planner&quot; and &quot;Project Planner&quot; are supported.</inlineHelpText>
        <label>Available In</label>
        <picklist>
            <picklistValues>
                <fullName>Resource Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Planner</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pse__Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true only the owner will be able to view and use this filter. Otherwise any user who has sharing access may make use of it.</inlineHelpText>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__SObject__c</fullName>
        <inlineHelpText>The API name of the SObject this set of filters operates on.</inlineHelpText>
        <label>SObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Filter Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>